# Lumen

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260618_0001_initial_schema.py  20260629_0002_auth_user_scope.py  20260629_0003_knowledgebase_es_retrieval.py  20260630_0004_source_assets_phase3.py
backend/service/: __init__.py  auth.py  config.py  db.py  main.py  maintenance.py  models.py  schemas.py  worker.py
backend/service/api/: __init__.py  agent.py  auth.py  chat.py  global_search.py  ingestion_jobs.py  knowledge_bases.py  memories.py  organization.py  (+6 more)
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_bookmark_parser.py  test_chat.py  test_docx_parser.py  test_elasticsearch_projection.py  test_embedding_provider.py  test_epub_parser.py  test_global_search.py  test_graph.py  test_health.py  test_image_parser.py  test_indexing_runs.py  test_ingestion_jobs_api.py  test_ingestion_jobs_repository.py  test_ingestion_worker.py  test_knowledge.py  test_knowledge_base_source_scope.py  test_knowledge_bases.py  test_maintenance.py  test_memories.py  test_organization.py  test_parsers_base.py  test_pdf_parser.py  test_retrieval_eval.py  test_retrieval_service.py  test_review.py  test_search.py  test_security.py  test_service_health.py  test_settings.py  test_source_assets.py  test_sources.py  test_sources_api_extended.py  test_status.py  test_storage.py  test_user_isolation.py  test_web_parser.py  test_worker_heartbeat.py
(+112 files in other folders)
