[project]
name = "lumen-backend"
version = "0.1.0"
description = "Lumen personal AI knowledge base and memory assistant backend"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
