[project]
name = "lumen-backend"
version = "0.1.0"
description = "Lumen personal AI knowledge base and memory assistant backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "beautifulsoup4>=4.12.3",
  "celery>=5.4.0",
  "cryptography>=42.0.0",
  "ebooklib>=0.18",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "Pillow>=10.0.0",
  "playwright>=1.40.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.5.2",
  "PyMuPDF>=1.23.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.12",
  "pytesseract>=0.3.10",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
